service-mesh/restaurant-service-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: restaurant-service
spec:
  hosts:
    - restaurant-service.happy-takeaway.svc.cluster.local
  http:
    - name: "restaurant-service"
      route:
        - destination:
            host: restaurant-service.happy-takeaway.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 100ms
        retryOn: gateway-error,connect-failure,refused-stream
