service-mesh/mobile-api-access.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mobile-api-graphql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mobile-api-graphql
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
